Fix Download Manager UI presentation during side swipe tab switching.

crbug.com/819416 was happening, because WebStateObserver::WasShown was
called before the animation was completed. This CL moves actual tab
switch operation to animation completion block to fix WasShown timing.
However it is necessary to send WebStateObserver::WasHidden before
animation is started, so this cl adds WebState::WasHidden call if the
tab was actually changed.

Bug: 819416
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: Ic45ad02e76674a4bd861fe2626f7d3c32aea3a11
Reviewed-on: https://chromium-review.googlesource.com/953075
Reviewed-by: Justin Cohen <justincohen@chromium.org>
Commit-Queue: Eugene But <eugenebut@chromium.org>
Cr-Commit-Position: refs/heads/master@{#541533}